@@ -1,4 +1,4 @@
-$Id: TODO,v 1.5 2002-08-09 10:59:36 wilsonp Exp $
+$Id: TODO,v 1.6 2002-08-09 19:23:38 wilsonp Exp $
 
 When claiming a task from this list, please immediately place your
 name beside it, change the date from the date that it was added to
@@ -33,7 +33,6 @@ NEW FEATURES
 
 CODE FEATURES
 ------------------
-[PW] (08/09/2002) Squeeze multiple zeros out of ALARALib
 **** (08/08/2002) Improve comments under doxygen
 **** (08/08/2002) Improve build instructions, either in new file or Makefile
 
