@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.2 2002-08-09 03:52:36 wilsonp Exp $
+$Id: ChangeLog,v 1.3 2002-08-09 19:23:37 wilsonp Exp $
 	
 Version X.Y.Z
 	
@@ -8,6 +8,8 @@ BUGS FIXED
 
 
 NEW FEATURES
+	* Squeeze multiple zeros out of ALARALib [PW] (08/09/2002) 
+	  THIS WILL REQUIRE CHANGE IN MINOR REVISION NUMBER
 
 
 CODE UPDATES
